--- a/contents/posts/introduction-to-mdx.mdx
+++ b/contents/posts/introduction-to-mdx.mdx
@@ -61,3 +61,33 @@ export function MyComponent({ name }) {
 Next.js renders the `.mdx` file as a page, converting Markdown to HTML and including React components.
 
 Learn more in the [Next.js MDX docs](https://nextjs.org/docs/app/building-your-application/configuring/mdx).
+
+---
+
+title: "Building a Blog Portfolio"
+publishedAt: "2025-04-17"
+slug: "blog-portfolio"
+author: "Your Name"
+
+---
+
+# Building a Blog Portfolio
+
+<div className="container mx-auto p-8">
+  ## Code Example
+  ```javascript {1,3}
+  // Highlighted lines 1 and 3
+  console.log("Hello, MDX!");
+  function greet() {
+    return "Welcome to my portfolio!";
+  }
+  ```
+
+## Feature Table
+
+| Feature | Description                         |
+| ------- | ----------------------------------- |
+| Code    | Highlighted with rehype-pretty-code |
+| Tables  | Enabled by remark-gfm               |
+
+</div>
