ui compelete for blog post with toc

--- a/contents/posts/introduction-to-mdx.mdx
+++ b/contents/posts/introduction-to-mdx.mdx
@@ -13,7 +13,7 @@ tags: ["next.js", "react", "frontend"]
 
 MDX combines Markdown with JSX, enabling dynamic, interactive content in Next.js. It's ideal for blogs or documentation needing React components within Markdown.
 
-## Setup
+## Setup and Implementation part here
 
 Install dependencies:
 
@@ -21,7 +21,7 @@ Install dependencies:
 npm install @next/mdx @mdx-js/loader @mdx-js/react
 ```
 
-Configure `next.config.js`:
+Configure 'next.config.js':
 
 ```js
 const withMDX = require("@next/mdx")()
@@ -48,7 +48,7 @@ This is Markdown text.
 <MyComponent name="World" />
 ```
 
-## Custom Component
+### Custom Component
 
 Create `components/MyComponent.jsx`:
 
