blog with mdx compeleted

--- a/contents/posts/introduction-to-mdx.mdx
+++ b/contents/posts/introduction-to-mdx.mdx
@@ -6,7 +6,16 @@ author: "Your Name"
 description: "Everything you need to start with Next.js in one place"
 image: "/images/posts/nextjs-guide.png"
 category: "web development"
-tags: ["next.js", "react", "frontend"]
+tags:
+  [
+    "next.js",
+    "react",
+    "frontend",
+    "lasdjflkdsaf",
+    "asdkfjlaskdjfjkasdf",
+    "asdfjlasdjflsdflkasdjfl",
+    "asdkjfiue",
+  ]
 ---
 
 # MDX in Next.js
